--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "aws-lambda": "^1.0.6",
     "aws-serverless-express": "^3.4.0",
     "dotenv": "^8.2.0",
+    "firebase-admin": "^9.6.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
